--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
       <div class="row section">
         <div class="col-lg-12">
           <h1>Enlaces a las diferentes funcionalidades del proyecto</h1>
-          <p>Para visualizar datos en tiempo real del viento, viajes del ascensor o modelos 3D se han diseñado los siguientes links:</p>
+          <p>Para visualizar datos en tiempo real del tiempo en Ermua, viajes del ascensor o modelos 3D se han diseñado los siguientes links:</p>
           <ul>
-          	<li>Unique Fonts</li>
-          	<li>Attractive Colors</li>
+          	<A HREF="https://demo.thingsboard.io/dashboard/488534c0-5540-11ec-a53b-97baf75c7cfe?publicId=a8142020-553d-11ec-a53b-97baf75c7cfe"> Dashboard de Thingsboard, con datos del tiempo </A>
+            
           	<li>Content Spacing for Legibility and Design</li>
           	<li>Decent Pictures that Still Load Quickly</li>
           	<li>Make the Pictures INFORMATIVE</li>
