--- a/index.html
+++ b/index.html
@@ -87,12 +87,15 @@
           <h1>Enlaces a las diferentes funcionalidades del proyecto</h1>
           <p>Para visualizar datos en tiempo real del tiempo en Ermua, viajes del ascensor o modelos 3D se han diseñado los siguientes links:</p>
           <ul>
-          	<A HREF="https://demo.thingsboard.io/dashboard/488534c0-5540-11ec-a53b-97baf75c7cfe?publicId=a8142020-553d-11ec-a53b-97baf75c7cfe"> Dashboard de Thingsboard, con datos del tiempo </A>
+            <li/li>
+          	<A HREF="https://demo.thingsboard.io/dashboard/488534c0-5540-11ec-a53b-97baf75c7cfe?publicId=a8142020-553d-11ec-a53b-97baf75c7cfe"> Dashboard de Thingsboard, datos metereológicos de Ermua, en tiempo real</A>
+            <li/li>
+          	<A HREF="https://demo.thingsboard.io/dashboard/6453c3e0-553d-11ec-a53b-97baf75c7cfe?publicId=a8142020-553d-11ec-a53b-97baf75c7cfe"> Dashboard de Thingsboard, datos calidad del aire edificio campus IMH</A>
             
-          	<li>Content Spacing for Legibility and Design</li>
-          	<li>Decent Pictures that Still Load Quickly</li>
-          	<li>Make the Pictures INFORMATIVE</li>
-          	<li>Custom Styling for the Captions</li>
+            <li>Video / Maqueta 3d</li>
+          	<li>Planos Circuitos</li>
+          	<li>Control por voz</li>
+          	<li>Tableaus</li>
           </ul>
         </div>
       </div>
@@ -102,8 +105,7 @@
       <footer>
         <div class="row">
           <div class="col-lg-12">
-            <p>Copyright &copy; IMH 2021 
-                                CIF G20302105</p>
+            <p>Copyright &copy; IMH 2021 CIF G20302105</p>
           </div>
         </div>
       </footer>
