--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
     <!-- Map -->
     <div id="contact" class="map">
-      <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed/v1/view?key=AIzaSyAYnx4K05wxgyx1h9lSLi4fB8zCE8r1EcU&center=-33.8569,151.2152&zoom=18&maptype=satellite"></a></small></iframe>
+      <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDAPGvP1bTgRwYAJM1ngBST5DmRSn8ITBI&q=place_id:ChIJc6M2wDnUUQ0RY6-ugO8xhSU"></a></small></iframe>
     </div>
     <!-- /Map -->
     
