--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <!-- Callout -->
     <div class="callout">
       <div class="vert-text">
-        <h1>Hola</h1>
+        <h1>Ascensor Aldapa, Ermua</h1>
       </div>
     </div>
     <!-- /Callout -->
