--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Proyecto IMH Ascensores Ermu</title>
+    <title>Proyecto IMH Ascensores Ermua</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -23,12 +23,12 @@
     <div id="sidebar-wrapper">
       <ul class="sidebar-nav">
         <a id="menu-close" href="#" class="btn btn-default btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
-        <li class="sidebar-brand"><a href="http://startbootstrap.com">Start Bootstrap</a></li>
-        <li><a href="#top">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#portfolio">Portfolio</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li class="sidebar-brand"><a href="https://ermuaio.carrd.co/">Gemelo Digital</a></li>
+        <li><a href="#top">Inicio</a></li>
+        <li><a href="#about">Contexto</a></li>
+        <li><a href="#services">Tecnologías</a></li>
+        <li><a href="#portfolio">Enlaces</a></li>
+        <li><a href="#contact">Contacto</a></li>
       </ul>
     </div>
     <!-- /Side Menu -->
@@ -50,7 +50,7 @@
         <div class="row">
           <div class="col-md-6 col-md-offset-3 text-center">
             <h2>El trabajo que se presenta tiene su contexto y antecedentes en la construcción y digitalización de los acensores públicos de Ermua</h2>
-            <p class="lead">El gemelo digital del proyecto realizado por Tecnalia/IMH se puede visualizar a continuación:<a target="_blank" href="https://ermuaio.carrd.co/"> Digital Twin Ermua</a></p>
+            <p class="lead">El gemelo digital del proyecto realizado por Tecnalia/IMH se puede visualizar a continuación: <a target="_blank" href="https://ermuaio.carrd.co/">Digital Twin Ermua</a></p>
           </div>
         </div>
       </div>
@@ -69,28 +69,28 @@
         <div class="row">
           <div class="col-md-2 col-md-offset-2 text-center">
             <div class="service-item">
-              <i class="service-icon fa fa-rocket"></i>
+              <i class="service-icon fa fa-sun-o"></i>
               <h4>Datos metereológicos</h4>
               <p class="lead">Mediante la plataforma IoT Thingsboard se obtienen datos del tiempo en Ermua en tiempo real</p>
             </div>
           </div>
           <div class="col-md-2 text-center">
             <div class="service-item">
-              <i class="service-icon fa fa-magnet"></i>
+              <i class="service-icon fa fa-building-o"></i>
               <h4>Modelos 3D</h4>
               <p class="lead">Visualización de los modelos 3D de ascensores y posibilidad de diseño</p>
             </div>
           </div>
           <div class="col-md-2 text-center">
             <div class="service-item">
-              <i class="service-icon fa fa-shield"></i>
+              <i class="service-icon fa fa-cloud-upload"></i>
               <h4>Inteligencia Artificial</h4>
               <p class="lead">Mediante los comandos de voz y la IA, es posible viajar en el ascensor sin tener que pulsar ningún botón</p>
             </div>
           </div>
           <div class="col-md-2 text-center">
             <div class="service-item">
-              <i class="service-icon fa fa-pencil"></i>
+              <i class="service-icon fa fa-tasks"></i>
               <h4>Tableau</h4>
               <p class="lead">Herramienta para la gestión de los datos obtenidos de los ascesores</p>
             </div>
@@ -113,29 +113,29 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4 col-md-offset-4 text-center">
-            <h2>Proyecto etc</h2>
+            <h2>Funcionalidades del proyecto</h2>
             <hr>
           </div>
         </div>
         <div class="row">
           <div class="col-md-4 col-md-offset-2 text-center">
             <div class="portfolio-item">
-              <a href="#"><img class="img-portfolio img-responsive" src="img/portfolio-1.jpg"></a>
-              <h4>Thingsboard</h4>
+              <a href="https://demo.thingsboard.io/dashboard/6453c3e0-553d-11ec-a53b-97baf75c7cfe?publicId=a8142020-553d-11ec-a53b-97baf75c7cfe"><img class="img-portfolio img-responsive" src="img/portfolio-1.jpg"></a>
+              <h4><a target="_blank" href="https://demo.thingsboard.io/dashboard/488534c0-5540-11ec-a53b-97baf75c7cfe?publicId=a8142020-553d-11ec-a53b-97baf75c7cfe">Thingsboard</a></h4>
             </div>
           </div>
           <div class="col-md-4 text-center">
             <div class="portfolio-item">
               <a href="#"><img class="img-portfolio img-responsive" src="img/portfolio-2.jpg"></a>
-              <h4>Modelos 3D</h4>
+              <h4><a target="_blank" href="https://sketchfab.com/3d-models/maqueta-ascensor-ermua-b91a3d6e2c444c1ba614a728edb0df41"></a>Modelos 3D</a></h4>
             </div>
           </div>
         </div>
         <div class="row">
           <div class="col-md-4 col-md-offset-2 text-center">
             <div class="portfolio-item">
-              <a href="#"><img class="img-portfolio img-responsive" src="img/portfolio-3.jpg"></a>
-              <h4>IA</h4>
+              <a href="https://studio.edgeimpulse.com/public/65423/latest"><img class="img-portfolio img-responsive" src="img/portfolio-3.jpg"></a>
+              <h4><a target="_blank" href="https://studio.edgeimpulse.com/public/65423/latest"></a>Inteligencia Artificial</a></h4>
             </div>
           </div>
           <div class="col-md-4 text-center">
