--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           <div class="col-md-4 text-center">
             <div class="portfolio-item">
               <a href="#"><img class="img-portfolio img-responsive" src="img/portfolio-2.jpg"></a>
-              <h4><a target="_blank" href="https://sketchfab.com/3d-models/maqueta-ascensor-ermua-b91a3d6e2c444c1ba614a728edb0df41"></a>Modelos 3D</a></h4>
+              <h4><a target="_blank" href="https://sketchfab.com/3d-models/maqueta-ascensor-ermua-b91a3d6e2c444c1ba614a728edb0df41">Modelos 3D</a></h4>
             </div>
           </div>
         </div>
@@ -135,7 +135,7 @@
           <div class="col-md-4 col-md-offset-2 text-center">
             <div class="portfolio-item">
               <a href="https://studio.edgeimpulse.com/public/65423/latest"><img class="img-portfolio img-responsive" src="img/portfolio-3.jpg"></a>
-              <h4><a target="_blank" href="https://studio.edgeimpulse.com/public/65423/latest"></a>Inteligencia Artificial</a></h4>
+              <h4><a target="_blank" href="https://studio.edgeimpulse.com/public/65423/latest">Inteligencia Artificial</a></h4>
             </div>
           </div>
           <div class="col-md-4 text-center">
