--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
           </div>
           <div class="col-md-4 text-center">
             <div class="portfolio-item">
-              <a href="#"><img class="img-portfolio img-responsive" src="img/portfolio-2.jpg"></a>
-              <h4><a target="_blank" href="https://sketchfab.com/3d-models/maqueta-ascensor-ermua-b91a3d6e2c444c1ba614a728edb0df41">Modelos 3D</a></h4>
+              <a href="https://sketchfab.com/3d-models/ascensor-aldapa-ongarai-96757037a5e540f0b047a1fdddce7e29"><img class="img-portfolio img-responsive" src="img/portfolio-2.jpg"></a>
+              <h4><a target="_blank" href="https://sketchfab.com/3d-models/ascensor-aldapa-ongarai-96757037a5e540f0b047a1fdddce7e29">Modelos 3D</a></h4>
             </div>
           </div>
         </div>
