--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
           </div>
           <div class="col-md-4 text-center">
             <div class="portfolio-item">
-              <a href="https://sketchfab.com/models/96757037a5e540f0b047a1fdddce7e29/embed"><img class="img-portfolio img-responsive" src="img/portfolio-2.jpg"></a>
-              <h4><a target="_blank" href="https://sketchfab.com/models/3c6c595035044a028f6fc236cb8a6b1e/embed"> ">Modelos 3D</a></h4>
+              <a href="https://sketchfab.com/models/3c6c595035044a028f6fc236cb8a6b1e/embed"><img class="img-portfolio img-responsive" src="img/portfolio-2.jpg"></a>
+              <h4><a target="_blank" href="https://sketchfab.com/models/96757037a5e540f0b047a1fdddce7e29/embed">Modelos 3D</a></h4>
             </div>
           </div>
         </div>
