--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="service-item">
               <i class="service-icon fa fa-tasks"></i>
               <h4>Tableau</h4>
-              <p class="lead">Herramienta para la gestión de los datos obtenidos de los ascesores</p>
+              <p class="lead">Herramienta para la gestión de los datos obtenidos de los ascensores</p>
             </div>
           </div>
         </div>
